{Dev}[competences, contact](dev catégorie)

--- a/css/sass/utils/_variables.scss
+++ b/css/sass/utils/_variables.scss
@@ -1,5 +1,13 @@
 // colors
 
 $primary-color: #7d98a1;
-// $secondary-color: #1c2321;
-// $third-color: #eef1ef;
+$secondary-color: #1c2321;
+$third-color: #eef1ef;
+$fourth-color: #A9B4C2;
+
+// fonts
+
+$primary-font : 'Noticia Text',
+serif;
+$secondary-font : 'Montserrat',
+serif;
