--- a/css/sass/base/_general.scss
+++ b/css/sass/base/_general.scss
@@ -6,6 +6,11 @@
   scroll-behavior: smooth;
 }
 
+input {
+  user-select: none;
+  padding: 10px;
+}
+
 .title {
   display: flex;
   justify-content: center;
@@ -14,7 +19,7 @@
 
   & h2 {
     position: relative;
-    font-family: serif;
+    font-family: $primary-font;
     font-style: italic;
     font-size: 20px;
     color: #7d98a1;
@@ -22,6 +27,7 @@
 
     &::after {
       position: absolute;
+      white-space: nowrap;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
