--- a/css/sass/pages/_index.scss
+++ b/css/sass/pages/_index.scss
@@ -18,18 +18,185 @@
 
   & p {
     width: 720px;
-    font-family: serif;
+    font-family: $primary-font;
     font-style: italic;
-    font-size: 25px;
+    font-size: 27px;
     text-align: center;
     color: #7d98a1;
-    line-height: 1.3;
+    line-height: 1.5;
   }
 }
 
-// TITLE FORMATION
-.title--formation {
+// FORMATIONS
+.title--formations {
   &::after {
     content: "Education";
+  }
+}
+
+// COMPETENCES
+.title--competences {
+  &::after {
+    content: "Skills";
+  }
+}
+
+.competences {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+
+  &__competence {
+    width: 720px;
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    margin: 16px 0;
+
+    & p {
+      font-family: $secondary-font;
+      text-transform: uppercase;
+      font-size: 14px;
+      width: 20%;
+    }
+
+    &__bar {
+      width: 80%;
+      height: 25px;
+      background-color: $third-color;
+      border-radius: 50px;
+
+      &__color {
+        height: 100%;
+        width: 0;
+        border-radius: 50px;
+        background-color: $fourth-color;
+      }
+
+    }
+  }
+
+  &__competence:nth-child(1) {
+    & .competences__competence__bar {
+      &__color {
+        width: 75%;
+      }
+    }
+  }
+
+  &__competence:nth-child(2) {
+    & .competences__competence__bar {
+      &__color {
+        width: 70%;
+      }
+    }
+  }
+
+  &__competence:nth-child(3) {
+    & .competences__competence__bar {
+      &__color {
+        width: 70%;
+      }
+    }
+  }
+
+  &__competence:nth-child(4) {
+    & .competences__competence__bar {
+      &__color {
+        width: 15%;
+      }
+    }
+  }
+
+  &__competence:nth-child(5) {
+    & .competences__competence__bar {
+      &__color {
+        width: 30%;
+      }
+    }
+  }
+
+  &__competence:nth-child(6) {
+    & .competences__competence__bar {
+      &__color {
+        width: 50%;
+      }
+    }
+  }
+
+  &__competence:nth-child(7) {
+    & .competences__competence__bar {
+      &__color {
+        width: 30%;
+      }
+    }
+  }
+}
+
+// contact
+.title--contact {
+  &::after {
+    content: "Get in Touch";
+  }
+}
+
+.contact--container {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+
+  .contact {
+    width: 960px;
+    display: flex;
+    justify-content: space-between;
+    background-color: $fourth-color;
+
+    &__informations {
+      width: 33%;
+      background-color: $third-color;
+      padding: 30px;
+
+      & p {
+        font-family: $primary-font;
+        font-size: 18px;
+        color: $fourth-color;
+        margin-bottom: 10px;
+      }
+    }
+
+    &__formulaire {
+      width: 67%;
+      padding: 30px;
+
+      & form {
+        width: 100%;
+        height: 100%;
+
+        & .contact__formulaire__names {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+
+          & input {
+            width: calc((100% / 2) - 15px);
+          }
+        }
+
+        & .contact__formulaire__email {
+          width: 100%;
+          margin-top: 30px;
+
+          & input {
+            width: 100%;
+          }
+        }
+
+        & textarea {
+          height: 200px;
+          width: 100%;
+          margin-top: 30px;
+        }
+      }
+    }
   }
 }
