--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@
   scroll-behavior: smooth;
 }
 
+input {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  padding: 10px;
+}
+
 .title {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -19,7 +27,7 @@
 
 .title h2 {
   position: relative;
-  font-family: serif;
+  font-family: "Noticia Text", serif;
   font-style: italic;
   font-size: 20px;
   color: #7d98a1;
@@ -28,6 +36,7 @@
 
 .title h2::after {
   position: absolute;
+  white-space: nowrap;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -67,7 +76,7 @@ header ul li:last-child {
 }
 
 header ul li a {
-  font-family: serif;
+  font-family: "Noticia Text", serif;
   font-size: 20px;
   font-style: italic;
   color: #7d98a1;
@@ -100,15 +109,169 @@ header ul li a {
 
 .presentation p {
   width: 720px;
-  font-family: serif;
+  font-family: "Noticia Text", serif;
   font-style: italic;
-  font-size: 25px;
+  font-size: 27px;
   text-align: center;
   color: #7d98a1;
-  line-height: 1.3;
+  line-height: 1.5;
 }
 
-.title--formation::after {
+.title--formations::after {
   content: "Education";
+}
+
+.title--competences::after {
+  content: "Skills";
+}
+
+.competences {
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.competences__competence {
+  width: 720px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-item-align: center;
+      align-self: center;
+  margin: 16px 0;
+}
+
+.competences__competence p {
+  font-family: "Montserrat", serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  width: 20%;
+}
+
+.competences__competence__bar {
+  width: 80%;
+  height: 25px;
+  background-color: #eef1ef;
+  border-radius: 50px;
+}
+
+.competences__competence__bar__color {
+  height: 100%;
+  width: 0;
+  border-radius: 50px;
+  background-color: #A9B4C2;
+}
+
+.competences__competence:nth-child(1) .competences__competence__bar__color {
+  width: 75%;
+}
+
+.competences__competence:nth-child(2) .competences__competence__bar__color {
+  width: 70%;
+}
+
+.competences__competence:nth-child(3) .competences__competence__bar__color {
+  width: 70%;
+}
+
+.competences__competence:nth-child(4) .competences__competence__bar__color {
+  width: 15%;
+}
+
+.competences__competence:nth-child(5) .competences__competence__bar__color {
+  width: 30%;
+}
+
+.competences__competence:nth-child(6) .competences__competence__bar__color {
+  width: 50%;
+}
+
+.competences__competence:nth-child(7) .competences__competence__bar__color {
+  width: 30%;
+}
+
+.title--contact::after {
+  content: "Get in Touch";
+}
+
+.contact--container {
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.contact--container .contact {
+  width: 960px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #A9B4C2;
+}
+
+.contact--container .contact__informations {
+  width: 33%;
+  background-color: #eef1ef;
+  padding: 30px;
+}
+
+.contact--container .contact__informations p {
+  font-family: "Noticia Text", serif;
+  font-size: 18px;
+  color: #A9B4C2;
+  margin-bottom: 10px;
+}
+
+.contact--container .contact__formulaire {
+  width: 67%;
+  padding: 30px;
+}
+
+.contact--container .contact__formulaire form {
+  width: 100%;
+  height: 100%;
+}
+
+.contact--container .contact__formulaire form .contact__formulaire__names {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contact--container .contact__formulaire form .contact__formulaire__names input {
+  width: calc((100% / 2) - 15px);
+}
+
+.contact--container .contact__formulaire form .contact__formulaire__email {
+  width: 100%;
+  margin-top: 30px;
+}
+
+.contact--container .contact__formulaire form .contact__formulaire__email input {
+  width: 100%;
+}
+
+.contact--container .contact__formulaire form textarea {
+  height: 200px;
+  width: 100%;
+  margin-top: 30px;
 }
 /*# sourceMappingURL=style.css.map */
