--- a/css/sass/pages/_index.scss
+++ b/css/sass/pages/_index.scss
@@ -72,7 +72,6 @@
         border-radius: 50px;
         background-color: $fourth-color;
       }
-
     }
   }
 
@@ -144,12 +143,14 @@
   width: 100vw;
   display: flex;
   justify-content: center;
+  margin-bottom: 120px;
 
   .contact {
     width: 960px;
     display: flex;
     justify-content: space-between;
     background-color: $fourth-color;
+    box-shadow: 2px 2px 10px rgba(28, 35, 33, 0.2);
 
     &__informations {
       width: 33%;
@@ -159,7 +160,7 @@
       & p {
         font-family: $primary-font;
         font-size: 18px;
-        color: $fourth-color;
+        color: $secondary-color;
         margin-bottom: 10px;
       }
     }
@@ -169,6 +170,7 @@
       padding: 30px;
 
       & form {
+        position: relative;
         width: 100%;
         height: 100%;
 
@@ -195,8 +197,43 @@
           height: 200px;
           width: 100%;
           margin-top: 30px;
+          padding: 10px;
+        }
+
+        & button {
+          cursor: pointer;
+          position: absolute;
+          bottom: 15px;
+          right: 15px;
+          font-family: $secondary-font;
+          font-size: 14px;
+          padding: 7px 20px;
+          color: $third-color;
+          background-color: $fourth-color;
+          border: none;
         }
       }
+    }
+  }
+}
+
+// FOOTER
+footer {
+  width: 100vw;
+  background-color: $fourth-color;
+  display: flex;
+  justify-content: center;
+
+  & .footer {
+    width: 960px;
+    padding: 50px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+
+    &__text {
+      font-family: $primary-font;
+      color: $third-color;
     }
   }
 }
