--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ header ul li a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-bottom: 120px;
 }
 
 .contact--container .contact {
@@ -221,6 +222,8 @@ header ul li a {
       -ms-flex-pack: justify;
           justify-content: space-between;
   background-color: #A9B4C2;
+  -webkit-box-shadow: 2px 2px 10px rgba(28, 35, 33, 0.2);
+          box-shadow: 2px 2px 10px rgba(28, 35, 33, 0.2);
 }
 
 .contact--container .contact__informations {
@@ -232,7 +235,7 @@ header ul li a {
 .contact--container .contact__informations p {
   font-family: "Noticia Text", serif;
   font-size: 18px;
-  color: #A9B4C2;
+  color: #1c2321;
   margin-bottom: 10px;
 }
 
@@ -242,6 +245,7 @@ header ul li a {
 }
 
 .contact--container .contact__formulaire form {
+  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -273,5 +277,49 @@ header ul li a {
   height: 200px;
   width: 100%;
   margin-top: 30px;
+  padding: 10px;
+}
+
+.contact--container .contact__formulaire form button {
+  cursor: pointer;
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  font-family: "Montserrat", serif;
+  font-size: 14px;
+  padding: 7px 20px;
+  color: #eef1ef;
+  background-color: #A9B4C2;
+  border: none;
+}
+
+footer {
+  width: 100vw;
+  background-color: #A9B4C2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer .footer {
+  width: 960px;
+  padding: 50px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+footer .footer__text {
+  font-family: "Noticia Text", serif;
+  color: #eef1ef;
 }
 /*# sourceMappingURL=style.css.map */
