--- a/css/sass/base/_general.scss
+++ b/css/sass/base/_general.scss
@@ -11,6 +11,12 @@ input {
   padding: 10px;
 }
 
+.container {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
 .title {
   display: flex;
   justify-content: center;
