--- a/css/sass/base/_general.scss
+++ b/css/sass/base/_general.scss
@@ -28,7 +28,7 @@ input {
     font-family: $primary-font;
     font-style: italic;
     font-size: 20px;
-    color: #7d98a1;
+    color: $primary-color;
     margin: 50px 0;
 
     &::after {
