--- a/css/style.css
+++ b/css/style.css
@@ -337,18 +337,7 @@ header ul li a {
   content: "Get in Touch";
 }
 
-.contact--container {
-  width: 100vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 120px;
-}
-
-.contact--container .contact {
+.contact {
   width: 960px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -359,33 +348,34 @@ header ul li a {
   background-color: #A9B4C2;
   -webkit-box-shadow: 2px 2px 10px rgba(28, 35, 33, 0.2);
           box-shadow: 2px 2px 10px rgba(28, 35, 33, 0.2);
+  margin-bottom: 120px;
 }
 
-.contact--container .contact__informations {
+.contact__informations {
   width: 33%;
   background-color: #eef1ef;
   padding: 30px;
 }
 
-.contact--container .contact__informations p {
+.contact__informations p {
   font-family: "Noticia Text", serif;
   font-size: 18px;
   color: #1c2321;
   margin-bottom: 10px;
 }
 
-.contact--container .contact__formulaire {
+.contact__formulaire {
   width: 67%;
   padding: 30px;
 }
 
-.contact--container .contact__formulaire form {
+.contact__formulaire form {
   position: relative;
   width: 100%;
   height: 100%;
 }
 
-.contact--container .contact__formulaire form .contact__formulaire__names {
+.contact__formulaire form .contact__formulaire__names {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -395,27 +385,27 @@ header ul li a {
           justify-content: space-between;
 }
 
-.contact--container .contact__formulaire form .contact__formulaire__names input {
+.contact__formulaire form .contact__formulaire__names input {
   width: calc((100% / 2) - 15px);
 }
 
-.contact--container .contact__formulaire form .contact__formulaire__email {
+.contact__formulaire form .contact__formulaire__email {
   width: 100%;
   margin-top: 30px;
 }
 
-.contact--container .contact__formulaire form .contact__formulaire__email input {
+.contact__formulaire form .contact__formulaire__email input {
   width: 100%;
 }
 
-.contact--container .contact__formulaire form textarea {
+.contact__formulaire form textarea {
   height: 200px;
   width: 100%;
   margin-top: 30px;
   padding: 10px;
 }
 
-.contact--container .contact__formulaire form button {
+.contact__formulaire form button {
   cursor: pointer;
   position: absolute;
   bottom: 15px;
@@ -456,5 +446,39 @@ footer .footer {
 footer .footer__text {
   font-family: "Noticia Text", serif;
   color: #eef1ef;
+}
+
+@media (max-width: 960px) {
+  header ul {
+    width: 720px;
+  }
+  .logo img {
+    width: 200px;
+  }
+  .presentation p {
+    width: 540px;
+    font-size: 23px;
+  }
+  .formations {
+    width: 720px;
+  }
+  .formations__formation p:nth-child(2) {
+    font-size: 23px;
+  }
+  .formations__formation p:nth-child(3) {
+    font-size: 23px;
+  }
+  .formations__formation p:nth-child(4) {
+    font-size: 14px;
+  }
+  .competences__competence {
+    width: 600px;
+  }
+  .contact {
+    width: 900px;
+  }
+  .contact__informations p {
+    font-size: 16px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
