{dev}[scrollToTop](Add main.js)

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,40 @@ input {
   text-transform: uppercase;
 }
 
+#scrollToTop {
+  z-index: 100;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: #7d98a1;
+  border: none;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#scrollToTop i {
+  color: #1c2321;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 header {
   display: -webkit-box;
   display: -ms-flexbox;
