--- a/css/sass/base/_general.scss
+++ b/css/sass/base/_general.scss
@@ -44,3 +44,25 @@ input {
     }
   }
 }
+
+#scrollToTop {
+  z-index: 100;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: $primary-color;
+  border: none;
+  cursor: pointer;
+  user-select: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  & i {
+    color: $secondary-color;
+    user-select: none;
+  }
+}
