--- a/css/sass/utils/_variables.scss
+++ b/css/sass/utils/_variables.scss
@@ -4,6 +4,7 @@ $primary-color: #7d98a1;
 $secondary-color: #1c2321;
 $third-color: #eef1ef;
 $fourth-color: #A9B4C2;
+$fifth-color: #5E6572;
 
 // fonts
 
