--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,7 @@ header ul li a {
   text-transform: uppercase;
   font-size: 14px;
   width: 20%;
+  line-height: 2;
 }
 
 .competences__competence__bar {
@@ -448,13 +449,13 @@ header ul li a {
   font-size: 14px;
   padding: 7px 20px;
   color: #eef1ef;
-  background-color: #A9B4C2;
+  background-color: #5E6572;
   border: none;
 }
 
 footer {
   width: 100vw;
-  background-color: #A9B4C2;
+  background-color: #5E6572;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -509,10 +510,79 @@ footer .footer__text {
     width: 600px;
   }
   .contact {
-    width: 900px;
+    width: 720px;
   }
   .contact__informations p {
     font-size: 16px;
+  }
+}
+
+@media (max-width: 720px) {
+  header ul {
+    width: 540px;
+  }
+  .logo img {
+    width: 165px;
+  }
+  .presentation p {
+    width: 400px;
+    font-size: 18px;
+  }
+  .formations {
+    width: 720px;
+  }
+  .formations__formation p:nth-child(2) {
+    font-size: 18px;
+  }
+  .formations__formation p:nth-child(3) {
+    font-size: 20px;
+  }
+  .formations__formation p:nth-child(4) {
+    font-size: 12px;
+  }
+  .competences__competence {
+    width: 500px;
+  }
+  .competences__competence p {
+    font-size: 12px;
+  }
+  .contact {
+    width: 540px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: transparent;
+    -webkit-box-shadow: 2px 2px 10px rgba(28, 35, 33, 0);
+            box-shadow: 2px 2px 10px rgba(28, 35, 33, 0);
+  }
+  .contact__informations {
+    width: 100%;
+    background-color: transparent;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0;
+    margin-bottom: 50px;
+  }
+  .contact__informations p {
+    font-size: 16px;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    text-align: center;
+  }
+  .contact__formulaire {
+    width: 100%;
+    padding: 0;
+  }
+  .contact__formulaire form input,
+  .contact__formulaire form textarea {
+    background-color: #eef1ef;
   }
 }
 /*# sourceMappingURL=style.css.map */
